<resources>
    <string name="app_name">smART</string>\
    <string name="splash_welcome_txt">LIVE SCORE NEPAL </string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>

    <string name="login_fb_btn_label">"{faw-facebook-f}    Login with Facebook"</string>
    <string name="signup_fb_btn_label">"{faw-facebook-f}    Signup with Facebook"</string>

    <string name="no_account">Don\’t have an account?</string>

    <string name="item1_txt">Eligibility and\nTreatment</string>
    <string name="item2_txt">WHO Stages</string>
    <string name="item3_txt">Calculator</string>

</resources>
